# extraviadoscli

./: Makefile  README.md  pyproject.toml
docs/: prosecutor_office_websites.txt
src/extraviadoscli/: __main__.py  extraviadoscli.py  mpp.py  renders.py
src/extraviadoscli/webscrapers/: __init__.py  base.py  utils.py
src/extraviadoscli/webscrapers/gro/: __init__.py  commons.py  webscrapers.py
src/extraviadoscli/webscrapers/mor/: __init__.py  commons.py  webscrapers.py
tests/webscrapers/: test_base.py  test_utils.py
tests/webscrapers/gro/: alba_article_content_1.html  alba_full_page_1.html  amber_article_content_1.html  amber_full_page_1.html
tests/webscrapers/mor/: test_commons.py  test_webscrapers.py
tests/webscrapers/mor/html/: amber_article_1.html  amber_full_page_1.html  amber_post_1.html  custom_article_1.html  custom_full_page_1.html
